deep joins; 3rd level of nesting sample;